--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,12 @@
-service: .
+service: serverless-example
 
 provider:
   name: aws
   runtime: nodejs4.3
 
+plugins:
+  - serverless-plugin-include-dependencies
+
 functions:
   hello:
-    handler: src.index.hello
+    handler: src/index.hello
