--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "serverless-example",
   "version": "1.0.0",
   "description": "Serverless framework example",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "nodemon src/server.js",
     "test": "eslint --ignore-path .gitignore ."
   },
   "repository": {
@@ -19,8 +20,13 @@
     "url": "https://github.com/neverendingqs-sandbox/serverless-example/issues"
   },
   "homepage": "https://github.com/neverendingqs-sandbox/serverless-example#readme",
+  "dependencies": {
+    "express": "^4.14.1",
+    "serverless-http": "^1.3.0"
+  },
   "devDependencies": {
     "eslint": "^3.15.0",
+    "nodemon": "^1.11.0",
     "serverless-plugin-include-dependencies": "^1.2.0"
   }
 }
