--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "test": "eslint --ignore-path .gitignore ."
+    "test": "eslint --ignore-path .gitignore . && mocha"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,12 @@
     "serverless-http": "^1.3.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.15.0",
+    "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
-    "serverless-plugin-include-dependencies": "^1.2.0"
+    "serverless-plugin-include-dependencies": "^1.2.0",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2"
   }
 }
