--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless framework example",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "sls offline -H node_modules/openssl-self-signed-certificate -P 3001",
     "test": "eslint --ignore-path .gitignore . && mocha"
   },
   "repository": {
@@ -28,7 +28,8 @@
     "chai": "^3.5.0",
     "eslint": "^3.15.0",
     "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
+    "openssl-self-signed-certificate": "^1.1.6",
+    "serverless-offline": "^3.8.3",
     "serverless-plugin-include-dependencies": "^1.2.0",
     "supertest": "^3.0.0",
     "supertest-as-promised": "^4.0.2"
