--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/neverendingqs-sandbox/serverless-example#readme",
   "dependencies": {
+    "ejs": "^2.5.5",
     "express": "^4.14.1",
     "serverless-http": "^1.3.0"
   },
