--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^3.15.0",
     "mocha": "^3.2.0",
     "openssl-self-signed-certificate": "^1.1.6",
+    "serverless-dynamodb-local": "^0.2.18",
     "serverless-offline": "^3.8.3",
     "serverless-plugin-include-dependencies": "^1.2.0",
     "supertest": "^3.0.0",
